--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.7.3"
   }
 }
